2010-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/tcbfuncs.h: Added type shadowtcb_status.
	* lib/tcbfuncs.h, lib/tcbfuncs.c: Return a shadowtcb_status
	instead of an int.
	* lib/tcbfuncs.c: Do not return in OUT_OF_MEMORY.
	* lib/tcbfuncs.c: Only FreeBSD specify that the returned buffer is
	NULL in case of failure. The return value of asprintf shall be
	checked.
	* lib/tcbfuncs.c: Avoid implicit conversion of pointers or
	integers to booleans.
	* lib/tcbfuncs.c: Avoid assignments in comparisons.
	* lib/tcbfuncs.c: Do not free path before its last use.
	* lib/tcbfuncs.c: Include shadowio.h, needed for the
	spw_setdbname's prototype.
	* lib/tcbfuncs.c: Ignore fflush() return value.
	* lib/tcbfuncs.c: Avoid implicit signed to unsigned conversions.
	* lib/tcbfuncs.c: Avoid integer to char conversions.
	* lib/tcbfuncs.c: Include prototypes.h for the definition of Prog.
	* lib/tcbfuncs.c: Removed dead return.
	* lib/tcbfuncs.c: move_dir() and shadowtcb_move() need a non NULL
	stored_tcb_user.
	* lib/tcbfuncs.c: Avoid implicit int to mode_t conversion.
	* lib/tcbfuncs.c: Added brackets and parenthesis.
	* lib/tcbfuncs.c: Re-indent.

2010-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Avoid implicit conversion of pointers to
	booleans.
	* lib/commonio.c: Ignore the return value of close when a
	failure is reported.

2010-03-16  Nicolas François  <nicolas.francois@centraliens.net>

	* man/faillog.8.xml: Document the behavior in display mode of the
	-a option.
	* NEWS, man/faillog.8.xml, src/faillog.c: Extend the -a option to
	the non-display mode. This changes the default behavior of the -l,
	-m, -r, -t options when -a is not specified (restrict to existing
	users).

2010-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chage.1.xml, man/login.defs.5.xml, man/pwck.8.xml,
	man/pwconv.8.xml, man/useradd.8.xml, man/userdel.8.xml,
	man/usermod.8.xml, man/vipw.8.xml: Document the usage of the